--- a/soundcloud/src/App.css
+++ b/soundcloud/src/App.css
@@ -62,7 +62,7 @@ li {
 }
 
 .like {
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 .fa-trash, .fa-edit, .fa-times, .fa-thumbs-up, .fa-thumbs-o-up {
@@ -70,5 +70,5 @@ li {
 }
 
 .numLikes {
-  margin-left: 5px;
+  margin-right:5px;
 }
