--- a/soundcloud/src/App.css
+++ b/soundcloud/src/App.css
@@ -8,6 +8,10 @@
   display: none;
 }
 
+.page-header {
+  margin-top: 15px;
+  padding-bottom: 20px;
+}
 
 h1 {
   display: inline;
@@ -16,6 +20,7 @@ h1 {
 
 #logout {
   float: right;
+  margin-top: 5px;
 
 }
 
